--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -391,7 +391,7 @@ service adsprpcd /system/vendor/bin/adsprpcd
     group media
 
 service wcnss-service /system/vendor/bin/wcnss_service
-    class main
+    class late_start
     user system
     group system wifi oem_2950 radio
     oneshot
