ham: Restart cameraserver after completing boot
* Due to some reason, front camera doesn't seem to show up on
  booting. Restart cameraserver so that its temporarily fixes this
  issue untill a solution is found.

Change-Id: I8e1e33c0be78dc6d87c5171b38d7f37cddc24ee1

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -255,6 +255,9 @@ service qcamerasvr /vendor/bin/mm-qcamera-daemon
     user camera
     group camera system inet input graphics
 
+on property:sys.boot_completed=1
+    restart cameraserver
+
 service mpdecision /vendor/bin/mpdecision --avg_comp
     class main
     user root
