ham: Build livedisplay 2.0 HAL
 * Also change class of ppd from late_start to hal.

Change-Id: I202cc1167d4d2cca93779671a7332847693a3838

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -308,8 +308,7 @@ service wcnss-service /vendor/bin/wcnss_service
     oneshot
 
 service ppd /vendor/bin/mm-pp-daemon
-    class late_start
-    disabled
+    class hal
     user system
     socket pps stream 0660 system system
     group system graphics
