ham: Update charger service path and label
charger binary is moved to /system/bin. Also the label got changed
to charger. Update it accordingly.

Change-Id: I78574238f9fc5ec028d10ab866676bfc0cd36370

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -231,8 +231,9 @@ service qseecomd /vendor/bin/qseecomd
     user root
     group root
 
-service charger /charger -c
+service charger /system/bin//charger
     class charger
+    group system graphics
     critical
     seclabel u:r:charger:s0
 
