--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -232,8 +232,8 @@ service qseecomd /vendor/bin/qseecomd
     group root
 
 service charger /system/bin//charger
-    class charger
-    group system graphics
+    user system
+    group system graphics input
     critical
     seclabel u:r:charger:s0
 
