[DNM] ham: Remove seclabels for now
Change-Id: Ic27c4bd7c07ae9c9891c23a5b9a82a385fad03ea

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -234,7 +234,7 @@ service qseecomd /vendor/bin/qseecomd
 service charger /charger -c
     class charger
     critical
-    seclabel u:r:charger:s0
+#    seclabel u:r:charger:s0
 
 service hvdcp /vendor/bin/hvdcp
     class core
@@ -244,7 +244,7 @@ service hvdcp /vendor/bin/hvdcp
 service qbcharger /charger -m 1
     disabled
     oneshot
-    seclabel u:r:healthd:s0
+#    seclabel u:r:healthd:s0
 
 on property:sys.qbcharger.enable=true
     start qbcharger
@@ -290,7 +290,7 @@ service hciattach /vendor/bin/init.qcom.bt.sh
     user bluetooth
     group bluetooth net_bt_admin oem_2950 radio
     disabled
-    seclabel u:r:bluetooth_loader:s0
+#    seclabel u:r:bluetooth_loader:s0
     oneshot
 
 on property:vendor.bluetooth.hciattach=true
@@ -340,7 +340,7 @@ service fuse_usbdisk /vendor/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw
 service program_bdaddr /vendor/bin/init.program_bdaddr.sh
     user bluetooth
     group bluetooth
-    seclabel u:r:bluetooth_loader:s0
+#    seclabel u:r:bluetooth_loader:s0
     disabled
     oneshot
 
