--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -234,6 +234,7 @@ service qseecomd /vendor/bin/qseecomd
 service charger /system/bin//charger
     user system
     group system graphics input
+    capabilities SYS_BOOT
     critical
     seclabel u:r:charger:s0
 
